[package]
name = "gitignored"
version = "0.2.1"
authors = ["Kirill Vasiltsov <interalia.dev@gmail.com>"]
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/gitignored"
description = "A Rust implementation of the gitignore algorithm"
license = "MIT"
keywords = ["git", "gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
regex = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
